tests/type-errors/state_assignment.arl
archetype state_assignment

states =
| Created initial

action myaction () {
  effect {
    state := Created
  }
}
